Estende note e valutazioni complessive
